# tf_SfM

./: .gitignore
0.dataset_split/: list_test.txt  list_train.txt
0.external/tf_specialops/: CMakeLists.txt
0.external/tf_specialops/doc/: generate_doc.py
0.external/tf_specialops/python/: tfspecialops.py
0.external/tf_specialops/src/: CMakeLists.txt  angleaxistorotationmatrix.cc  cuda_helper.h  depthtoflow.cc  depthtoflow_kernel.cu  depthtonormals.cc  depthtonormals_kernel.cu  flowtodepth.cc  helper.h  leakyrelu.cc  leakyrelu_kernel.cu  median3x3downsample.cc  median3x3downsample_kernel.cu  mysqr.cc  mysqr_kernel.cu  replacenonfinite.cc  replacenonfinite_kernel.cu  rotation_format.cu  rotation_format.h  rotationmatrixtoangleaxis.cc  scaleinvariantgradient.cc  scaleinvariantgradient_kernel.cu  warp2d.cc  warp2d_kernel.cu
0.external/tf_specialops/test/: CMakeLists.txt  test_AngleAxisToRotationMatrix.py  test_DepthToFlow.py  test_DepthToNormals.py  test_FlowToDepth.py  test_LeakyRelu.py  test_Median3x3Downsample.py  test_MySqr.py  test_ReplaceNonfinite.py  test_RotationMatrixToAngleAxis.py  test_ScaleInvariantGradient.py  test_Warp2d.py  vis.py  vis_cython.pyx
0.layers/: activations.py  batchnorm.py  conv.py  deconv.py  evalfunct.py  losses.py
1.convert_data/1.folder_checker/: folder_checker.py
1.convert_data/2.Converter/: ConvertDataset.py
1.convert_data/2.Converter/tools/: read_param.py
1.convert_data/2.converter/: testDataset.py
1.convert_data/2.converter/tools/: makeTFrecords.py  parser.py
1.convert_data/3.Sampler/: sampler.py
1.convert_data/4.transforms/: depth_projection.py  relateTranform.py
1.convert_data/4.transforms/tools/: newreader.py  read_data_sample.py  read_param.py  transforms.py
2.CNN_2D/: data.py  depth_output.py  eval.py  model.py  param.py  train.py
